--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,21 @@ title: Digital Fabrication Module
 email: andrew.sleigh@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Work-in-progress and draft course notes for a module in digital fabrication at University of Brighton, based on Fab Academy
-baseurl: "/learning/digital-fabrication-module" # the subpath of your site, e.g. /blog
-url: "https://andrewsleigh.com" # the base hostname & protocol for your site, e.g. http://example.com
+  
+# Setup default URLs to be for github and github pages, so they will render correctly without overrides  
+  
+url: "https://andrewsleigh.github.io" # the base hostname & protocol for your site, e.g.   
+baseurl: "/digital-fabrication-module" # the subpath of your site, e.g. /blog
+
+
+
+# But also create some alternatives that can be substituted in when I build the site to deploy to my server
+
+ascom_url: "https://andrewsleigh.com" # the base hostname & protocol for your site, e.g.   
+ascom_baseurl: "/learning/digital-fabrication-module" # the subpath of your site, e.g. /blog
+
+
+http://example.com
 twitter_username: andrewsleigh
 github_username:  andrewsleigh
 
