file structure notes

--- a/docs/_config-ascom.yml
+++ b/docs/_config-ascom.yml
@@ -1,5 +1,6 @@
-
-# But also create some alternatives that can be substituted in when I build the site to deploy to my server
+# This file is called when I run:
+# jekyll build --destination _site-ascom/ --config _config.yml,_config-ascom.yml
+# It overrides the URL variables when I build the site to deploy to my server
 
 url: "https://andrewsleigh.com" # the base hostname & protocol for your site, e.g.   
 baseurl: "/learning/digital-fabrication-module" # the subpath of your site, e.g. /blog
