--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -20,7 +20,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   
 # Setup default URLs to be for github and github pages, so they will render correctly without overrides  
   
-url: "https://andrewsleigh.github.io" # the base hostname & protocol for your site, e.g. http://example.com   
+url: "https://fablabbrighton.github.io" # the base hostname & protocol for your site, e.g. http://example.com   
 baseurl: "/digital-fabrication-module" # the subpath of your site, e.g. /blog
 
 excerpt_separator: <!--more-->
